--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="flex items-center justify-between flex-wrap bg-white p-6 shadow">
+<nav class="flex items-center justify-between flex-wrap bg-white p-6 shadow-sm">
   <div class="flex items-center flex-shrink-0 text-white mr-6 w-1/5 justify-center">
     <img src="assets/logo.png" class="h-10 w-20" alt="asda">
   </div>
