--- a/src/app/modules/user/pages/user-registration/user-registration.component.html
+++ b/src/app/modules/user/pages/user-registration/user-registration.component.html
@@ -1,1 +1,2 @@
-<app-user-auth-form [formTemplate]="authForm" [loader]="loader" title="Sign Up" formType="signUp" (formSubmit)="signUp($event)"></app-user-auth-form>
+<app-user-auth-form [formTemplate]="authForm" [loader]="loader" [title]="authType === 'otp' ? 'Otp' : 'SignUp'" 
+    [formType]="authType" (formSubmit)="signUp($event)" (verifyOtp)="verifyOtp($event)"></app-user-auth-form>
