--- a/src/app/modules/user/shared/components/user-auth-form/user-auth-form.component.html
+++ b/src/app/modules/user/shared/components/user-auth-form/user-auth-form.component.html
@@ -3,87 +3,106 @@
         <h2 class="mb-6 text-center text-3xl font-bold text-textBlue font-dance">
            {{title}}
         </h2>
+        <ng-container *ngIf="formType !== 'otp'">
         <form [formGroup]="formTemplate" (ngSubmit)="onSubmit()" class="text-textBlue">
-            <div *ngIf="formType === 'signUp'">
-                <label for="username" class="text-textBlue text-sm">Full Name</label>
-                <input id="username" name="username" type="text" autocomplete="username" required
-                    class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                    formControlName="name">
-                <div *ngIf="formTemplate.get('name')?.invalid && formTemplate.get('name')?.touched"
-                    class="text-sm text-red-600">
-                    Full Name is required.
+                <div *ngIf="formType === 'signUp'">
+                    <label for="username" class="text-textBlue text-sm">Full Name</label>
+                    <input id="username" name="username" type="text" autocomplete="username" required
+                        class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
+                        formControlName="name">
+                    <div *ngIf="formTemplate.get('name')?.invalid && formTemplate.get('name')?.touched"
+                        class="text-sm text-red-600">
+                        Full Name is required.
+                    </div>
                 </div>
+                <div>
+                    <label for="email" class="text-textBlue text-sm">Email address</label>
+                    <input id="email" name="email" type="email" autocomplete="email" required
+                        class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
+                        formControlName="email">
+                    <div *ngIf="formTemplate.get('email')?.invalid && formTemplate.get('email')?.touched"
+                        class="text-sm text-red-600">
+                        Email is required and must be a valid email address.
+                    </div>
+                </div>
+                <div *ngIf="formType === 'signUp'">
+                    <label for="email" class=" text-sm">Phone</label>
+                    <input id="phone" name="phone" type="text" autocomplete="phone" required
+                        class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
+                        formControlName="phone">
+                    <div *ngIf="formTemplate.get('phone')?.invalid && formTemplate.get('phone')?.touched"
+                        class="text-sm text-red-600">
+                        Enter Valid Phone
+                    </div>
+                </div>
+                <div *ngIf="formType === 'signUp'">
+                    <label for="email" class=" text-sm">DOB</label>
+                    <input id="dob" name="dob" type="date" autocomplete="dob" required
+                        class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
+                        formControlName="dob">
+                    <div *ngIf="formTemplate.get('dob')?.invalid && formTemplate.get('dob')?.touched"
+                        class="text-sm text-red-600">
+                        Enter Valid Date
+                    </div>
+                </div>
+                <div *ngIf="formType === 'signUp'">
+                    <label for="email" class=" text-sm">Address</label>
+                    <input id="address" name="address" type="text" autocomplete="phone" required
+                        class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
+                        formControlName="address">
+                    <div *ngIf="formTemplate.get('address')?.invalid && formTemplate.get('address')?.touched"
+                        class="text-sm text-red-600">
+                        Enter Valid Address
+                    </div>
+                </div>
+                <div>
+                    <label for="password" class=" text-sm">Password</label>
+                    <input id="password" name="password" type="password" autocomplete="current-password" required
+                        class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
+                        formControlName="password">
+                    <div *ngIf="formTemplate.get('password')?.invalid && formTemplate.get('password')?.touched"
+                        class="text-sm text-red-600">
+                        Password is required.
+                    </div>
+                </div>
+                <div *ngIf="formType === 'signUp'">
+                    <label for="confirm-password" class="text-sm">Confirm Password</label>
+                    <input id="confirm-password" name="confirmPass" type="password" autocomplete="current-password" required
+                        class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
+                        formControlName="confirmPass">
+                    <div *ngIf="formTemplate.get('confirmPass')?.invalid && formTemplate.get('confirmPass')?.touched"
+                        class="text-sm text-red-600">
+                        Confirm Password is required.
+                    </div>
+                </div>
+                <div>
+                    <button type="submit"
+                        class="w-full py-3 text-sm font-semibold text-white flex justify-center items-center rounded-md hover:bg-secColor focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-4"
+                        [ngClass]="{ 'bg-mainColor': !loader, 'bg-secColor': loader }">
+                        <span *ngIf="loader">
+                            <app-loader [size]="5"></app-loader>
+                        </span>
+                        <span *ngIf="!loader">Submit</span>
+                    </button>
+                </div>
+            </form>
+        </ng-container>
+        <ng-container *ngIf="formType === 'otp'">
+            <div>
+                <label for="confirm-password" class="text-sm">Otp</label>
+                <input id="otp" name="otp" type="text" 
+                    class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" [(ngModel)]="otp">
             </div>
             <div>
-                <label for="email" class="text-textBlue text-sm">Email address</label>
-                <input id="email" name="email" type="email" autocomplete="email" required
-                    class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                    formControlName="email">
-                <div *ngIf="formTemplate.get('email')?.invalid && formTemplate.get('email')?.touched"
-                    class="text-sm text-red-600">
-                    Email is required and must be a valid email address.
-                </div>
-            </div>
-            <div *ngIf="formType === 'signUp'">
-                <label for="email" class=" text-sm">Phone</label>
-                <input id="phone" name="phone" type="text" autocomplete="phone" required
-                    class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                    formControlName="phone">
-                <div *ngIf="formTemplate.get('phone')?.invalid && formTemplate.get('phone')?.touched"
-                    class="text-sm text-red-600">
-                    Enter Valid Phone
-                </div>
-            </div>
-            <div *ngIf="formType === 'signUp'">
-                <label for="email" class=" text-sm">DOB</label>
-                <input id="dob" name="dob" type="date" autocomplete="dob" required
-                    class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                    formControlName="dob">
-                <div *ngIf="formTemplate.get('dob')?.invalid && formTemplate.get('dob')?.touched"
-                    class="text-sm text-red-600">
-                    Enter Valid Date
-                </div>
-            </div>
-            <div *ngIf="formType === 'signUp'">
-                <label for="email" class=" text-sm">Address</label>
-                <input id="address" name="address" type="text" autocomplete="phone" required
-                    class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                    formControlName="address">
-                <div *ngIf="formTemplate.get('address')?.invalid && formTemplate.get('address')?.touched"
-                    class="text-sm text-red-600">
-                    Enter Valid Address
-                </div>
-            </div>
-            <div>
-                <label for="password" class=" text-sm">Password</label>
-                <input id="password" name="password" type="password" autocomplete="current-password" required
-                    class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                    formControlName="password">
-                <div *ngIf="formTemplate.get('password')?.invalid && formTemplate.get('password')?.touched"
-                    class="text-sm text-red-600">
-                    Password is required.
-                </div>
-            </div>
-            <div *ngIf="formType === 'signUp'">
-                <label for="confirm-password" class="text-sm">Confirm Password</label>
-                <input id="confirm-password" name="confirmPass" type="password" autocomplete="current-password" required
-                    class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-50 border rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                    formControlName="confirmPass">
-                <div *ngIf="formTemplate.get('confirmPass')?.invalid && formTemplate.get('confirmPass')?.touched"
-                    class="text-sm text-red-600">
-                    Confirm Password is required.
-                </div>
-            </div>
-            <div>
-                <button type="submit"
-                    class="w-full py-3 text-sm font-semibold text-white flex justify-center items-center rounded-md hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-4"
-                    [ngClass]="{ 'bg-mainColor': !loader, 'bg-gray-800': loader }">
+                <button type="button"
+                    class="w-full py-3 text-sm font-semibold text-white flex justify-center items-center rounded-md hover:bg-secColor focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-4"
+                    [ngClass]="{ 'bg-mainColor': !loader, 'bg-secColor': loader }" (click)="onOtpSubmit()">
                     <span *ngIf="loader">
                         <app-loader [size]="5"></app-loader>
                     </span>
-                    <span *ngIf="!loader">Click Me</span>
+                    <span *ngIf="!loader">Verify Otp</span>
                 </button>
             </div>
-        </form>
+        </ng-container>
     </div>
 </div>
