user login complete

--- a/src/app/modules/user/pages/sign-in/sign-in.component.html
+++ b/src/app/modules/user/pages/sign-in/sign-in.component.html
@@ -1,1 +1,7 @@
-<app-user-auth-form [formTemplate]="authForm" [loader]="loader" (formSubmit)="signIn($event)" title="Sign In" formType="signIn"></app-user-auth-form>
+<app-user-auth-form
+  [formTemplate]="authForm"
+  [loader]="loader"
+  (formSubmit)="signIn($event)"
+  title="Sign In"
+  formType="signIn"
+></app-user-auth-form>
