--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="flex items-center justify-between flex-wrap bg-white p-6 shadow-md">
+<nav class="flex items-center justify-between flex-wrap bg-white p-5 shadow-md">
   <div class="flex items-center flex-shrink-0 text-white mr-6 w-1/5 justify-center">
     <img src="assets/logo.png" class="h-10 w-20" alt="asda">
   </div>
@@ -9,7 +9,7 @@
   </div>
   <div class=" hidden flex-grow lg:flex lg:items-center w-2/5 xl:w-3/5 items-center justify-center lg:text-center text-textBlue">
     <div class="text-sm lg:flex-grow">
-      <a  class="block mt-4 lg:inline-block lg:mt-0 text-sm mr-4 hover:text-secColor" *ngFor="let item of navList" [routerLink]="item.path"   >
+      <a  class="block mt-4 lg:inline-block lg:mt-0 text-[12px] mr-4 hover:text-secColor" *ngFor="let item of navList" [routerLink]="item.path"   >
         {{item.name}}
       </a>
     </div>
