--- a/src/app/modules/user/shared/components/department-card/department-card.component.html
+++ b/src/app/modules/user/shared/components/department-card/department-card.component.html
@@ -5,7 +5,7 @@
           <img
             alt="Placeholder"
             class="block h-60 w-60 object-cover"
-            [src]="department.imageUrl  "
+            [src]="department.imageUrl"
           />
         </a>
       </div>
@@ -23,7 +23,7 @@
         </ul>
       </div>
 
-      <div class="flex items-center justify-start leading-tight p-2 md:p-4 mb-3">
+      <div class="flex items-center justify-start leading-tight p-2 md:p-4 mb-3" (click)="getDr(department._id)">
         <p class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-cyan-600 dark:hover:bg-cyan-700 dark:focus:ring-cyan-800">
           View Doctors
           <svg
