--- a/src/app/modules/user/shared/components/doctor-card/doctor-card.component.html
+++ b/src/app/modules/user/shared/components/doctor-card/doctor-card.component.html
@@ -43,7 +43,7 @@
   
       <hr class="opacity-20 mt-1 border-textBlue" />
   
-      <div class="flex items-center justify-start leading-tight p-2 md:p-4 mb-3" >
+      <div class="flex items-center justify-start leading-tight p-2 md:p-4 mb-3" (click)="getDrDetails(doctor._id)" >
         <div class="w-full flex items-center justify-center mt-1 hover:text-secColor focus:text-secColor">
           <p class="mt-2 text-textBlue hover:text-secColor focus:text-secColor">View Profile</p>
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" [attr.stroke-width]="1.5" stroke="currentColor" class="w-4 h-4 mt-2">
