booking form completed

--- a/src/app/modules/user/pages/doctor-details/doctor-details.component.html
+++ b/src/app/modules/user/pages/doctor-details/doctor-details.component.html
@@ -59,7 +59,7 @@
           <button
             type="button"
             class="ml-3 px-4 py-2 border border-gray-300 text-sm font-medium rounded-md  hover:bg-secColor hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 mb-2 sm:mb-0 drProfileButtons bg-mainColor text-white"
-            
+            (click)="goToBooking()"
           >
             Book Now
           </button>
