--- a/src/app/modules/user/pages/booking-page/booking-page.component.html
+++ b/src/app/modules/user/pages/booking-page/booking-page.component.html
@@ -58,6 +58,7 @@
                 </button>
                 <button
                   class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-lg me-3"
+                  (click)="initiallizeRazPay()"
                 >
                   Pay Online
                 </button>
@@ -70,7 +71,7 @@
               </div>
             </div>
           </div>
-          
     </div>
   </div>
+  
   
