--- a/src/app/modules/user/pages/booking-page/booking-page.component.html
+++ b/src/app/modules/user/pages/booking-page/booking-page.component.html
@@ -14,7 +14,7 @@
         <label for="date" class="block text-sm text-gray-700 font-medium mb-2">Date</label>
         <mat-form-field>
             <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="picker" [(ngModel)]="date" (ngModelChange)="handleDateChange()" name="date">
+            <input matInput [matDatepicker]="picker" [min]="minDate" [max]="maxDate" [(ngModel)]="date" (ngModelChange)="handleDateChange()" name="date">
             <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
