--- a/src/app/modules/user/user.component.html
+++ b/src/app/modules/user/user.component.html
@@ -1,5 +1,5 @@
 <div class="container min-h-screen">
-  <app-navbar [navList]="navList" [userLogged]="userCheck()"></app-navbar>
+  <app-navbar [navList]="navList" [userLogged]="userCheck()" (navigateProfile)="goToProfile()"></app-navbar>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
