--- a/src/app/modules/user/shared/components/doctor-card/doctor-card.component.html
+++ b/src/app/modules/user/shared/components/doctor-card/doctor-card.component.html
@@ -24,7 +24,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z" />
           <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" />
         </svg>
-        <p class="ms-2">{{ doctor.hospital }}</p>
+        <p class="ms-2 mt-2">{{ doctor.hospital }}</p>
       </div>
   
       <div class="flex items-center justify-start ms-5 text-sm text-gray-500 text-center leading-tight p-2 md:p-4">
