--- a/src/app/modules/user/shared/components/history/history.component.html
+++ b/src/app/modules/user/shared/components/history/history.component.html
@@ -6,24 +6,42 @@
       </div>
     </ng-container>
     <ng-template #historyContent>
-      <div class="bg-gray-100 p-4 md:max-w-full mx-auto h-full overflow-y-auto">
-        <div *ngFor="let historyItem of history" class="mb-2 bg-white rounded-lg p-3 flex items-center justify-between">
+      <div class="bg-gray-100 p-4 md:max-w-full mx-auto h-full ">
+        <div class="w-full flex text-start mb-5">
+          <h1 class="text-textBlue text-lg font-bold">History</h1>
+        </div>
+       <div class="overflow-y-auto h-96">
+        <div *ngFor="let historyItem of history" class="mb-2 bg-white rounded-lg p-3 flex items-center justify-between shadow-md">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-3">
             <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0" />
           </svg>
-          <p class=" flex-grow tracking-wide text-textBlue text-sm">
-            Doctor:
-            <a class="text-textBlue font-semibold me-3"> Dr {{ historyItem.doctorId.fullName }}</a>
-            Date: <a class="text-textBlue font-semibold me-3">{{ historyItem.date.substring(0, 10) }}</a>
-            Time: <a class="text-textBlue font-semibold me-3"> {{ historyItem.slot }}</a>
-            booked on: <a class="text-textBlue font-semibold me-3">{{ historyItem.createdAt.substring(0, 10) }}</a>
+          <p class="flex-grow tracking-wide text-textBlue text-[12px] flex flex-col md:flex-row">
+            <span class="mb-1 sm:mb-0">Doctor:</span>
+            <a class="text-textBlue font-semibold me-3">{{ historyItem.doctorId.fullName }}</a>
+            <span class="mb-1 sm:mb-0">Date:</span>
+            <a class="text-textBlue font-semibold me-3">{{ historyItem.date.toString() | slice:0:10 }}</a>
+            <span class="mb-1 sm:mb-0">Time:</span>
+            <a class="text-textBlue font-semibold me-3">{{ historyItem.slot }}</a>
+            <span class="mb-1 sm:mb-0">Booked on:</span>
+            <a class="text-textBlue font-semibold me-3">{{ historyItem.createdAt.toString() | slice:0:10 }}</a>
             <ng-container [ngSwitch]="historyItem.status">
-              <ng-container *ngSwitchCase="'visited'">status: <a class="text-textBlue font-semibold">Consulted</a></ng-container>
-              <ng-container *ngSwitchCase="'unVisited'">status: <a class="text-textBlue font-semibold">Not Consulted</a></ng-container>
-              <ng-container *ngSwitchCase="'cancelled'">status: <a class="text-textBlue font-semibold">Cancelled</a></ng-container>
+              <ng-container *ngSwitchCase="'visited'">
+                <span class="mb-1 sm:mb-0">Status:</span>
+                <a class="text-textBlue font-semibold">Consulted</a>
+              </ng-container>
+              <ng-container *ngSwitchCase="'unVisited'">
+                <span class="mb-1 sm:mb-0">Status:</span>
+                <a class="text-textBlue font-semibold">Not Consulted</a>
+              </ng-container>
+              <ng-container *ngSwitchCase="'cancelled'">
+                <span class="mb-1 sm:mb-0">Status:</span>
+                <a class="text-textBlue font-semibold">Cancelled</a>
+              </ng-container>
             </ng-container>
           </p>
+          
         </div>
+       </div>
       </div>
     </ng-template>
   </div>
