--- a/src/app/modules/user/shared/components/user-auth-form/user-auth-form.component.html
+++ b/src/app/modules/user/shared/components/user-auth-form/user-auth-form.component.html
@@ -78,9 +78,9 @@
                 <div>
                     <button type="submit"
                         class="w-full py-3 text-sm font-semibold text-white flex justify-center items-center rounded-md hover:bg-secColor focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-4"
-                        [ngClass]="{ 'bg-mainColor': !loader, 'bg-secColor': loader }">
+                        [ngClass]="{ 'bg-mainColor': !loader, 'bg-mainColor-400': loader }">
                         <span *ngIf="loader">
-                            <app-loader [size]="5"></app-loader>
+                            <app-loader [size]="10"></app-loader>
                         </span>
                         <span *ngIf="!loader">Submit</span>
                     </button>
@@ -96,9 +96,9 @@
             <div>
                 <button type="button"
                     class="w-full py-3 text-sm font-semibold text-white flex justify-center items-center rounded-md hover:bg-secColor focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-4"
-                    [ngClass]="{ 'bg-mainColor': !loader, 'bg-secColor': loader }" (click)="onOtpSubmit()">
+                    [ngClass]="{ 'bg-mainColor': !loader, 'bg-mainColor-400': loader }" (click)="onOtpSubmit()">
                     <span *ngIf="loader">
-                        <app-loader [size]="5"></app-loader>
+                        <app-loader [size]="10"></app-loader>
                     </span>
                     <span *ngIf="!loader">Verify Otp</span>
                 </button>
