--- a/src/app/shared/components/loader/loader.component.scss
+++ b/src/app/shared/components/loader/loader.component.scss
@@ -1,5 +1,5 @@
 .loader {
-    border: 4px solid black;
+    border: 4px solid #66A1FD;
     border-top: 4px solid #ffff;
     border-radius: 50%;
     /* width: 24px;
