profile and wallet complete

--- a/src/app/modules/user/pages/booking-page/booking-page.component.html
+++ b/src/app/modules/user/pages/booking-page/booking-page.component.html
@@ -47,6 +47,7 @@
               <div class="flex justify-between">
                 <button
                   class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-lg mr-4"
+                  (click)="payWithWallet()"
                 >
                   Pay with Wallet
                 </button>
