--- a/src/app/modules/user/pages/profile-details/profile-details.component.html
+++ b/src/app/modules/user/pages/profile-details/profile-details.component.html
@@ -28,31 +28,35 @@
           <i class="fas fa-university text-lg "></i>
           {{user.phone}}
         </div>
+
+        <button class="bg-red-600 p-1 px-4 text-[12px] text-white hover:bg-red-400 rounded shadow-sm" (click)="logOut()">
+          Log Out
+        </button>
       </div>
     </div>
     <div class="text-center mt-5 bg-gray-100">
-      <div class="flex justify-center lg:justify-start items-center p-2">
-        <div class="mr-4 p-3 text-center flex flex-col items-center w-1/3 rounded-md drop-shadow-md " [ngClass]="{'bg-white' : page === 'appointments' }" (click)="changePage('appointments')" >
+      <div class="flex justify-center  items-center p-2">
+        <div class="mr-4 p-3 text-center flex flex-col items-center w-1/2 rounded-md drop-shadow-md " [ngClass]="{'bg-white' : page === 'appointments' }" (click)="changePage('appointments')" >
           <ng-icon
             name="heroCalendarSolid"
             class="text-[27px] text-textBlue hover:text-secColor"
           ></ng-icon>
           <span class="text-blueGray-400 text-[12px]">Appointments</span>
         </div>
-        <div class="mr-4 p-3 text-center flex flex-col items-center w-1/3 rounded-md drop-shadow-md" [ngClass]="{'bg-white' : page === 'history' }" (click)="changePage('history')">
+        <div class="mr-4 p-3 text-center flex flex-col items-center w-1/2 rounded-md drop-shadow-md" [ngClass]="{'bg-white' : page === 'history' }" (click)="changePage('history')">
           <ng-icon
             name="heroBellAlertSolid"
             class="text-[27px] text-textBlue hover:text-secColor"
           ></ng-icon>
           <span class="text-blueGray-400 text-[12px]">History</span>
         </div>
-        <div class="mr-4 p-3 text-center flex flex-col items-center w-1/3 rounded-md drop-shadow-md" [ngClass]="{'bg-white' : page === 'editProfile' }">
+        <!-- <div class="mr-4 p-3 text-center flex flex-col items-center w-1/3 rounded-md drop-shadow-md" [ngClass]="{'bg-white' : page === 'editProfile' }">
           <ng-icon
             name="heroPencilSquareSolid"
             class="text-[27px] text-textBlue hover:text-secColor"
           ></ng-icon>
           <span class="text-blueGray-400 text-[12px]">Edit</span>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="text-center mt-1 p-2 ">
