--- a/src/app/modules/user/shared/components/dep-section-home/dep-section-home.component.html
+++ b/src/app/modules/user/shared/components/dep-section-home/dep-section-home.component.html
@@ -3,39 +3,42 @@
         <div class="w-full flex justify-center mt-3">
           <h1 class="department-head">Top Departments</h1>
         </div>
-        <div class="department-container">
-          <div class="department-list mt-2 text-sm">
-            <ul>
-              <li *ngFor="let department of departments.slice(0, 4)" 
-                  (click)="handleDepartmentClick(department)"
-                  [class.active]="selectedDepartment?._id === department._id">
-                {{ department.name }}
-              </li>
-            </ul>
-          </div>
-          <div class="department-details">
-            <div class="department-header">
-              <h3>{{ selectedDepartment ? selectedDepartment.name : 'Select a department' }}</h3>
-            </div>
-            <div class="department-content">
-              <ng-container *ngIf="selectedDepartment">
-                <div class="department-image mb-3">
-                  <img [src]="selectedDepartment.imageUrl" [alt]="selectedDepartment.name" />
-                </div>
-                <div class="department-description mt-3 text-sm">
-                  <p>{{ selectedDepartment.description }}</p>
-                  <button class="btn book-btn mt-3 p-2 text-sm flex" >
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 my-auto me-2">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
-                    </svg>
-                    Find a Doctor
-                  </button>
-                </div>
-              </ng-container>
-              <p *ngIf="!selectedDepartment">Click on a department to see details</p>
-            </div>
-          </div>
+        <div class="container h-96 flex items-center justify-center" *ngIf="loading">
+          <app-loader [size]="40"></app-loader>
         </div>
+        <ng-container *ngIf="!loading">
+          <div class="department-container">
+            <div class="department-list mt-2 text-sm">
+              <ul>
+                <li *ngFor="let department of departments; let i = index" 
+                    [class.active]="departments[selectedDep]._id === department._id" (click)="depChange(i)" >
+                  {{ department.name }}
+                </li>
+              </ul>
+            </div>
+            <div class="department-details">
+              <div class="department-header">
+                <h3>{{  departments[selectedDep].name  }}</h3>
+              </div>
+              <div class="department-content">
+                <ng-container >
+                  <div class="department-image mb-3">
+                    <img [src]="departments[selectedDep].imageUrl" [alt]="departments[selectedDep].name" />
+                  </div>
+                  <div class="department-description mt-3 text-sm">
+                    <p>{{ departments[selectedDep].description }}</p>
+                    <button class=" mt-3 p-3 bg-mainColor text-[12px] text-white flex rounded hover:bg-secColor" (click)="findDr(departments[selectedDep]._id)" >
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 my-auto me-2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                      </svg>
+                      Find a Doctor
+                    </button>
+                  </div>
+                </ng-container>
+              </div>
+            </div>
+          </div>
+        </ng-container>
       </section>
 </div>
   
