--- a/src/app/modules/user/shared/components/appointments-list/appointments-list.component.html
+++ b/src/app/modules/user/shared/components/appointments-list/appointments-list.component.html
@@ -28,43 +28,50 @@
       </div>
       <div class="overflow-y-auto h-96">
         <ng-container *ngFor="let appointment of appointments">
-            <div
-              class="mb-2 bg-white rounded-lg p-3 flex flex-col md:flex-row items-center justify-between shadow-md"
+          <div
+            class="mb-2 bg-white rounded-lg p-3 flex flex-col md:flex-row items-center justify-between shadow-md"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1"
+              stroke="currentColor"
+              class="w-8 h-8 md:mr-3 mb-3 md:mb-0"
             >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1"
-                stroke="currentColor"
-                class="w-8 h-8 md:mr-3 mb-3 md:mb-0"
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0"
+              />
+            </svg>
+            <p class="flex-grow tracking-wide text-textBlue text-sm md:mr-4">
+              You have booked an appointment with
+              <a class="text-textBlue font-semibold">
+                Dr {{ appointment.doctorId.fullName }}</a
               >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0"
-                />
-              </svg>
-              <p class="flex-grow tracking-wide text-textBlue text-sm md:mr-4">
-                You have booked an appointment with
-                <a class="text-textBlue font-semibold">
-                  Dr {{ appointment.doctorId.fullName }}</a
-                >
-                on
-                <a class="text-textBlue font-semibold">{{
-                  appointment.date.toString() | slice : 0 : 10
-                }}</a>
-                between
-                <a class="text-textBlue font-semibold">{{ appointment.slot }}</a>
-              </p>
-              <button
-                class="bg-red-600 p-1 px-2 text-white text-[13px] hover:bg-red-500 border-none rounded shadow-sm"
-                (click)="onClick(appointment._id)"
-              >
-                Cancel
-              </button>
-            </div>
-          </ng-container>
+              on
+              <a class="text-textBlue font-semibold">{{
+                appointment.date.toString() | slice : 0 : 10
+              }}</a>
+              between
+              <a class="text-textBlue font-semibold">{{ appointment.slot }}</a>
+            </p>
+            <button
+              class="bg-red-600 p-1 px-2 text-white text-[13px] hover:bg-red-500 border-none rounded shadow-sm"
+              [swal]="{
+                title: 'Are you Sure ?',
+                showCancelButton: true,
+                icon:'warning',
+                cancelButtonText:'No',
+                confirmButtonText:'Yes'
+              }"
+              (confirm)="onClick(appointment._id)"
+            >
+              Cancel
+            </button>
+          </div>
+        </ng-container>
       </div>
     </div>
   </ng-template>
