admin login complete

--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -1,3 +1,5 @@
 <app-admin-nav>
-    <router-outlet></router-outlet>
+  <div class="grow">
+      <router-outlet></router-outlet>
+  </div>  
 </app-admin-nav>
