--- a/src/app/modules/admin/shared/components/admin-nav/admin-nav.component.html
+++ b/src/app/modules/admin/shared/components/admin-nav/admin-nav.component.html
@@ -1,5 +1,5 @@
 <!-- component -->
-<div class="h-screen w-full bg-white relative flex overflow-hidden">
+<div class="h-screen w-screen bg-white relative flex overflow-hidden">
 
     <!-- Sidebar -->
     <aside class="h-full w-16 flex flex-col space-y-10 items-center justify-center relative bg-gray-800 text-white">
@@ -53,18 +53,9 @@
       <!-- Main -->
       <main class="max-w-full h-full flex relative overflow-y-hidden">
         <!-- Container -->
-        <ng-content></ng-content>
-        <!-- <div class="h-full w-full m-4 flex flex-wrap items-start justify-start rounded-tl grid-flow-col auto-cols-max gap-4 overflow-y-scroll">
-          <div class="w-96 h-60 rounded-lg flex-shrink-0 flex-grow bg-gray-400"></div>
-          <div class="w-96 h-60 rounded-lg flex-shrink-0 flex-grow bg-gray-400"></div>
-          <div class="w-96 h-60 rounded-lg flex-shrink-0 flex-grow bg-gray-400"></div>
-          <div class="w-96 h-60 rounded-lg flex-shrink-0 flex-grow bg-gray-400"></div>
-          <div class="w-96 h-60 rounded-lg flex-shrink-0 flex-grow bg-gray-400"></div>
-          <div class="w-96 h-60 rounded-lg flex-shrink-0 flex-grow bg-gray-400"></div>
-          <div class="w-96 h-60 rounded-lg flex-shrink-0 flex-grow bg-gray-400"></div>
-          <div class="w-96 h-60 rounded-lg flex-shrink-0 flex-grow bg-gray-400"></div>
-          <div class="w-96 h-60 rounded-lg flex-shrink-0 flex-grow bg-gray-400"></div>
-        </div> -->
+        <div class="h-full w-full m-4 flex flex-wrap items-start justify-start rounded-tl grid-flow-col auto-cols-max gap-4 overflow-y-scroll">
+          <ng-content></ng-content>
+        </div>
       </main>
     </div>
   
