--- a/src/app/modules/admin/pages/doctor-table/doctor-table.component.html
+++ b/src/app/modules/admin/pages/doctor-table/doctor-table.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="w-full p-2">
+    <div class="w-full p-2 text-textBlue text-xl font-bold">
         <h1>Doctors</h1>
     </div>
     <app-data-table>
