doc signup and signin complete

--- a/src/app/modules/doctor/doctor.component.html
+++ b/src/app/modules/doctor/doctor.component.html
@@ -1,2 +1,2 @@
-<router-outlet></router-outlet>
-<h1>hchgc</h1>
+<app-navbar [userLogged]="true" ></app-navbar>
+<app-doctor-profile></app-doctor-profile>
