--- a/src/app/modules/doctor/pages/doctor-profile/doctor-profile.component.html
+++ b/src/app/modules/doctor/pages/doctor-profile/doctor-profile.component.html
@@ -8,25 +8,25 @@
         <div class="lg:w-1/3 px-6 flex flex-col justify-center items-center p-5">
           <img
             alt="..."
-            [src]="user.profilePic ? user.profilePic : 'https://conferenceoeh.com/wp-content/uploads/profile-pic-dummy.png'"
+            [src]="doctor.profilePic ? doctor.profilePic : 'https://conferenceoeh.com/wp-content/uploads/profile-pic-dummy.png'"
             class="shadow-xl rounded-full h-auto mb-2 lg:mb-0 max-w-[150px]"
           />
         </div>
         <div class="lg:w-2/3 px-6 py-4 text-textBlue">
           <h3 class="text-lg md:text-xl font-semibold leading-normal text-center lg:text-left  mb-2">
-            {{user.fullName}}
+            {{doctor.fullName}}
           </h3>
           <div class="text-sm leading-normal mt-0 mb-2 text-center lg:text-left  font-bold uppercase">
             <i class="fas fa-map-marker-alt text-lg "></i>
-            {{user.address}}
+            {{doctor.hospital}}
           </div>
           <div class="mb-2 text-blueGray-600 mt-4 text-center lg:text-left">
             <i class="fas fa-briefcase text-lg "></i>
-            {{user.email}}
+            {{doctor.email}}
           </div>
           <div class="mb-2 text-blueGray-600 text-center lg:text-left">
             <i class="fas fa-university text-lg "></i>
-            {{user.phone}}
+            {{doctor.phone}}
           </div>
   
           <button class="bg-red-600 p-1 px-4 text-[12px] text-white hover:bg-red-400 rounded shadow-sm" (click)="logOut()">
@@ -43,24 +43,18 @@
             ></ng-icon>
             <span class="text-blueGray-400 text-[12px]">Appointments</span>
           </div>
-          <div class="mr-4 p-3 text-center flex flex-col items-center w-1/2 rounded-md drop-shadow-md" [ngClass]="{'bg-white' : page === 'history' }" (click)="changePage('history')">
+          <div class="mr-4 p-3 text-center flex flex-col items-center w-1/2 rounded-md drop-shadow-md" [ngClass]="{'bg-white' : page === 'timings' }" (click)="changePage('timings')">
             <ng-icon
               name="heroBellAlertSolid"
               class="text-[27px] text-textBlue hover:text-secColor"
             ></ng-icon>
-            <span class="text-blueGray-400 text-[12px]">History</span>
+            <span class="text-blueGray-400 text-[12px]">Timings</span>
           </div>
-          <div class="mr-4 p-3 text-center flex flex-col items-center w-1/3 rounded-md drop-shadow-md" [ngClass]="{'bg-white' : page === 'editProfile' }">
-            <ng-icon
-              name="heroPencilSquareSolid"
-              class="text-[27px] text-textBlue hover:text-secColor"
-            ></ng-icon>
-            <span class="text-blueGray-400 text-[12px]">Edit</span>
-          </div>
+          
         </div>
       </div>
       <div class="text-center mt-1 p-2 "> 
-       
+       <app-appointment-list [appointments]="appointments"></app-appointment-list>
       </div>
     </div>
   </div>
