add department added

--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -1,4 +1,4 @@
-<app-admin-nav>
+<app-admin-nav [page]="page" (onNavigate)="onNavigate($event)">
   <div class="grow">
       <router-outlet></router-outlet>
   </div>  
