--- a/src/app/modules/admin/pages/department-table/department-table.component.html
+++ b/src/app/modules/admin/pages/department-table/department-table.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="w-full p-2 text-textBlue text-xl font-bold">
-        <h1>Doctors</h1>
+        <h1>Departments</h1>
     </div>
     <app-data-table>
         <ng-container header-cell>
