--- a/src/app/modules/user/shared/components/appointments-list/appointments-list.component.html
+++ b/src/app/modules/user/shared/components/appointments-list/appointments-list.component.html
@@ -1,5 +1,5 @@
-<div class="container mx-auto p-4">
-  <ng-container *ngIf="appointments.length === 0; else appointmentsNotEmpty">
+<div class="container mx-auto p-4" >
+  <ng-container *ngIf="appointments?.length === 0; else appointmentsNotEmpty">
     <div class="flex flex-col items-center">
       <svg
         xmlns="http://www.w3.org/2000/svg"
