--- a/src/app/modules/user/shared/components/department-card/department-card.component.html
+++ b/src/app/modules/user/shared/components/department-card/department-card.component.html
@@ -1,5 +1,5 @@
 <div class="w-full">
-    <article class="overflow-hidden rounded-lg shadow-lg bg-white hover:bg-blue-50 h-[auto]">
+    <article class="overflow-hidden rounded-lg shadow-lg bg-white hover:bg-blue-50 h-[auto]" *ngIf="department">
       <div class="flex items-center justify-center leading-tight p-2 md:p-4 w -full">
         <a href="#">
           <img
