--- a/src/app/modules/doctor/pages/doctor-profile/doctor-profile.component.html
+++ b/src/app/modules/doctor/pages/doctor-profile/doctor-profile.component.html
@@ -5,7 +5,7 @@
   >
     <app-loader [size]="50"></app-loader>
   </div>
-  <div class="w-full lg:w-3/4 mx-auto h-full p-5" *ngIf="!loader">
+  <div class="w-full lg:w-3/4 mx-auto h-full p-5" *ngIf="!loader&&doctor">
     <h1 class="text-textBlue text-2xl font-bold text-center lg:text-left">
       Profile
     </h1>
