--- a/src/app/modules/user/pages/booking-page/booking-page.component.html
+++ b/src/app/modules/user/pages/booking-page/booking-page.component.html
@@ -8,7 +8,7 @@
     ></div>
   </div>
 
-  <div class="bg-white rounded-lg shadow-lg p-8 w-full md:w-1/2">
+  <div class="bg-white rounded-lg shadow-lg p-8 w-full md:w-1/2" *ngIf="doctor">
     <div class="w-full flex justify-center">
       <h2 class="text-xl font-semibold mb-4 text-textBlue">
         Book an Appointment
