--- a/src/app/modules/user/pages/doctor-details/doctor-details.component.html
+++ b/src/app/modules/user/pages/doctor-details/doctor-details.component.html
@@ -1,6 +1,6 @@
 <div class="bg-gray-100">
     <div class="max-w-4xl sm:w-full mx-auto py-6 px-4 sm:px-6 lg:px-8">
-      <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden" *ngIf="doctor">
         <div class="flex flex-col sm:flex-row items-center justify-start sm:w-full bg-gray-50 px-6 py-5">
           <div class="flex items-center mb-3 sm:mb-0 drProfilView">
             <img
