--- a/src/app/modules/user/shared/components/doctor-card/doctor-card.component.html
+++ b/src/app/modules/user/shared/components/doctor-card/doctor-card.component.html
@@ -1,5 +1,5 @@
 <div  class="">
-    <article class="overflow-hidden rounded-lg shadow-lg bg-white hover:bg-blue-50 h-[auto]">
+    <article class="overflow-hidden rounded-lg shadow-lg bg-white hover:bg-blue-50 h-[auto]" *ngIf="doctor">
       <div class="flex items-center justify-center leading-tight p-2 md:p-4">
         <a href="#">
           <img
@@ -10,9 +10,9 @@
         </a>
       </div>
   
-      <div class="flex items-center justify-center leading-tight text-textBlue">
+      <div class="flex items-center justify-center leading-tight text-textBlue" >
         <h1 class="text-lg">
-          <p class="no-underline font-semibold">Dr {{ doctor.fullName }}</p>
+          <p class="no-underline font-semibold test">Dr {{ doctor.fullName }}</p>
         </h1>
       </div>
   
