--- a/src/app/modules/doctor/pages/sign-in/sign-in.component.html
+++ b/src/app/modules/doctor/pages/sign-in/sign-in.component.html
@@ -2,5 +2,6 @@
     <div class="max-w-md w-full p-6 rounded-lg shadow-xl bg-white">
         <h2 class="text-2xl font-semibold mb-4 text-center text-textBlue">Doctor Sign In</h2>
         <app-doctor-auth-form formType="signIn" [doctorForm]="signInForm" (submitForm)="signIn($event)"  ></app-doctor-auth-form>
+        <p class="mt-2 text-textBlue text-sm cursor-pointer underline" routerLink="/doctor/signUp">register</p>
     </div>
 </div>
